# SSTPA-ToolsV2

./: .gitignore  CLAUDE.md  FloorPlan.md  NOTICE  README.md
Example_Data/: Agent.md  README.md  Skills.md
Example_Data/FireSat/: FireSat-Hierarchy.md  build_firesat.py  load-example-data.sh
Example_Data/FireSat/model/: 00-project.yaml  10-space-segment.yaml  20-command-segment.yaml  30-aviation-segment.yaml  40-ground-segment.yaml
backend/cmd/sstpa-backend/: main.go
backend/internal/api/: commit.go  commit_helpers.go  example.go  (+5 more)
deploy/: docker-compose.yml  load-reference-data.sh
deploy/caddy/: Caddyfile
docs/: ARCHITECTURE.md  DESIGN.md  PROGRESS.md  REQUIREMENTS-NOTES.md  SBOM.md  TESTING.md  VERIFICATION.md
frontend/: .taurignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  shutdown.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
installer/: README.md
installer/scripts/: build-package.sh
installer/templates/: install.ps1  install.sh  trust-ca.ps1  trust-ca.sh  uninstall.ps1  uninstall.sh
startup/src-tauri/: Cargo.toml  tauri.conf.json
startup/src-tauri/icons/: icon.icns
startup/src-tauri/src/: main.rs
startup/ui/: index.html  startup.js
sustainment/: README.md  config.yaml  requirements.txt
sustainment/logs/: acquire-20260704T004707.jsonl  normalize-20260704T004713.jsonl  pipeline-20260704T004707.jsonl  transform-20260704T004714.jsonl  validate-20260704T004714.jsonl
sustainment/sstpa_ref/: acquire.py  common.py  normalize.py  package.py  pipeline.py  transform.py  validate.py
(+51 files in other folders)
