[package]
name = "sstpa-startup"
version = "0.1.0"
description = "SSTPA Tools Startup Software (SRS §4)"
authors = ["Nicholas Triska"]
license = "LicenseRef-Proprietary"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
